Alterações no PR..

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 }
 
 :root {
+  /* [TODO]<theme>: variables should come from theme */
   --primary: #2A7AE4;
   --black: #000000;
   --blackLighter: #9E9E9E;
